<resources>
    <string name="app_name">Test</string>
    <string name="add_medicine">Add Medicine</string>
    <string name="edit_medicine">Edit Medicine</string>
    <string name="medicine_name">Enter Medicine Name</string>
    <string name="enter_dosage">Enter Dosage</string>
    <string name="enter_date_time">Enter Date Time</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="dosage">Dosage</string>
    <string name="enter_medicine_error">Please enter medicine name</string>
    <string name="enter_dosage_error">Please enter dose quantity</string>
    <string name="enter_date_time_error">Please enter date time</string>
    <string name="taken">Take</string>
    <string name="pending">Pending</string>
    <string name="report">Report</string>
    <string name="skip">skip</string>
    <string name="set_date_time">Set Date Time</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="date_time">date Time</string>
    <string name="status">Status</string>
    <string name="notification_message">Do you want to take medicine?</string>
    <string name="success_add">Medicine added successfully</string>
    <string name="success_update">Medicine updated successfully</string>
    <string name="error">Error</string>
    <string name="edit">Edit</string>
</resources>
