<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.rahulkumar.test.view.activities.addoreditmedicine.AddOrEditMedicineActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:backgroundTint="@color/colorPrimaryDark"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ToolbarStyle">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingRight="@dimen/dimen_40dp"
            android:text="@string/add_medicine"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_18sp"
            android:textStyle="bold" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_0dp"
        android:orientation="vertical"
        android:padding="@dimen/dimen_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textColorHint="@color/teal_600">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etMedicineName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/medicine_name"
                android:ellipsize="end"
                android:maxLines="1"
                android:inputType="text"
                android:textColor="@color/teal_600"
                android:textColorHint="@color/teal_600"
                android:textSize="@dimen/dimen_16sp"
                android:theme="@style/EditTextStyle" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tilDosage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:textColorHint="@color/teal_600">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/etDosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_dosage"
                android:inputType="number"
                android:ellipsize="end"
                android:maxLength="2"
                android:maxLines="1"
                android:textColor="@color/teal_600"
                android:textColorHint="@color/teal_600"
                android:textSize="@dimen/dimen_16sp"
                android:theme="@style/EditTextStyle" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/etDateTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:drawableRight="@drawable/ic_calendar"
            android:hint="@string/enter_date_time"
            android:focusable="false"
            android:clickable="true"
            android:textColor="@color/teal_600"
            android:textColorHint="@color/teal_600"
            android:textSize="@dimen/dimen_16sp"
            android:theme="@style/EditTextStyle" />


        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnSubmit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:background="@color/colorAccent"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/submit"
            android:textColor="@color/white" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
